Bug 457402 - QObject::connect(KWin::InputMethod, KWin::EffectsHandlerImpl): invalid nullptr parameter
Summary: QObject::connect(KWin::InputMethod, KWin::EffectsHandlerImpl): invalid nullpt...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-02 08:15 UTC by ratijas
Modified: 2022-08-02 12:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-08-02 08:15:09 UTC
SUMMARY

EffectsHandlerImpl::EffectsHandlerImpl(Compositor *compositor, Scene *scene)
{
    connect(kwinApp()->inputMethod(), &InputMethod::panelChanged, this, &EffectsHandlerImpl::inputPanelChanged);
}

This line throws the following warning into console output on start:

    QObject::connect(KWin::InputMethod, KWin::EffectsHandlerImpl): invalid nullptr parameter

STEPS TO REPRODUCE
1. Start KWin

OBSERVED RESULT
Input method is null, but code attempts to bind to its signals.

EXPECTED RESULT
???

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE: git master
Qt Version: 5.15.5
Kernel Version: 5.18.14-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: G752VT
System Version: 1.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-08-02 10:16:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2763
Comment 2 Zamundaaa 2022-08-02 12:52:01 UTC
Git commit 369194ab7290f8b9f53e5887452015fcfa2b9480 by Xaver Hugl.
Committed on 02/08/2022 at 10:15.
Pushed by zamundaaa into branch 'master'.

effectshandler: ignore inputmethod on X11

M  +3    -1    src/effects.cpp

https://invent.kde.org/plasma/kwin/commit/369194ab7290f8b9f53e5887452015fcfa2b9480