effectshandler: ignore inputmethod on X11

BUG: 457402